--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
       <div id="results"></div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
